force-app/src/objects/c2g__codaPurchaseInvoiceLineItem__c.object
<CustomObject>
    <description>The line items on the payable invoice, such as product, unit price, quantity and line total.</description>
    <fields>
        <fullName>c2g__CalculateTaxValuefromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, calculates the relevant tax value from the associated tax rate. In Combined Tax mode, this checkbox applies to both Tax Value and Tax Value 2 fields. You must clear the values in both fields before saving the page to have the values calculated from their associated tax rate.</description>
        <label>Calculate Tax Value from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DateFrom__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DateTo__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveLineNumber__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, derives the line number from the highest existing line number and increments it by one.</description>
        <label>Derive Line Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveTaxRateFromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, derives the relevant tax rate from the associated tax code. In Combined Tax mode, this checkbox applies to both Tax Rate and Tax Rate 2 fields. You must clear the values in both fields before saving the page to have the rates calculated from their associated tax code.</description>
        <label>Derive Tax Rate from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveUnitPricefromProduct__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, retrieves the unit price from the selected product.</description>
        <label>Derive Unit Price from Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Destination Company)</relationshipLabel>
        <relationshipName>PayableInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationNetValue__c</fullName>
        <formula>c2g__DestinationUnitPrice__c * c2g__DestinationQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity of product bought by destination company.</description>
        <label>Destination Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationUnitPrice__c</fullName>
        <description>The unit price for this product for destination company.</description>
        <label>Destination Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__EditTaxValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Tax Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExcludeFromWithholding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Product line item is excluded from the withholding tax calculation.</description>
        <label>Exclude from Withholding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__InputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Input VAT/GST Code)</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItemsInput</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PayableInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceCurrencyDecimalPlaces__c</fullName>
        <defaultValue>2</defaultValue>
        <description>The number of decimal places used by the invoice currency. Permitted values are 0 and 2. The default is 2.</description>
        <label>Currency Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__IsReverseChargeTax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NetValue__c</fullName>
        <formula>Round((c2g__UnitPrice__c * c2g__Quantity__c), IF(ISBLANK(c2g__InvoiceCurrencyDecimalPlaces__c), 2, c2g__InvoiceCurrencyDecimalPlaces__c))</formula>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OutputTaxRate__c</fullName>
        <label>Output Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OutputTaxValue__c</fullName>
        <label>Output Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OutputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OutPut Tax Code for Reverse Charge Tax Code.</description>
        <label>Output Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>PayableInvoiceLineItemsOutput</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>Purchase_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ProductCode__c</fullName>
        <formula>c2g__Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product name.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PurchaseInvoice__c</fullName>
        <description>The auto-generated payable invoice number.</description>
        <label>Payable Invoice Number</label>
        <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity of product bought.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SetTaxCodetoDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, sets the tax code to the default defined by the tax mode. In Combined Tax mode, this checkbox applies to the Combined Tax Code, Input Tax Code, and Input Tax Code 2 fields.</description>
        <label>Set Tax Code to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ShipFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The address of the company site from which the item is shipped. This field is used to calculate tax on the payable invoice line item when the Calculate Tax Using Line Level Address custom setting is enabled.</description>
        <inlineHelpText>The address of the company site from which the item is shipped. This field is used to calculate tax on the payable invoice line item when the Calculate Tax Using Line Level Address custom setting is enabled.</inlineHelpText>
        <label>Ship From</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The address on the selected company site is not validated.</errorMessage>
            <filterItems>
                <field>fferpcore__CompanySite__c.fferpcore__IsAddressValidated__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>fferpcore__CompanySite__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Ship From)</relationshipLabel>
        <relationshipName>PayableInvoiceLineItemsShipFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The address of the contact to which the item is shipped. This field is used to calculate tax on the payable invoice line item when the Calculate Tax Using Line Level Address custom setting is enabled.</description>
        <inlineHelpText>The address of the contact to which the item is shipped. This field is used to calculate tax on the payable invoice line item when the Calculate Tax Using Line Level Address custom setting is enabled.</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Ship To)</relationshipLabel>
        <relationshipName>PayableInvoiceLineItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCodeCombined__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Combined Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Line Items (Combined Tax Code)</relationshipLabel>
        <relationshipName>PurchaseInvoiceLineItemsTCCombined</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRate1__c</fullName>
        <label>Input Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRate2__c</fullName>
        <label>Tax Rate 2</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRateTotal__c</fullName>
        <formula>c2g__TaxRate1__c + c2g__TaxRate2__c - c2g__OutputTaxRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValue1__c</fullName>
        <label>Input Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValue2__c</fullName>
        <label>Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValueTotal__c</fullName>
        <formula>c2g__TaxValue1__c + c2g__TaxValue2__c - c2g__OutputTaxValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitPrice__c</fullName>
        <description>The unit price for this product.</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>Payable Invoice Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payable Invoice Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payable Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>c2g__ContactRule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( c2g__ShipTo__c ))  &amp;&amp; c2g__PurchaseInvoice__r.c2g__Account__c  &lt;&gt;  c2g__ShipTo__r.AccountId</errorConditionFormula>
        <errorDisplayField>c2g__ShipTo__c</errorDisplayField>
        <errorMessage>The account on the contact record must match that on the related payable invoice.</errorMessage>
    </validationRules>
</CustomObject>